fix sticky navigation gap and focus on scroll

--- a/Component/Navbar/Navbar.module.css
+++ b/Component/Navbar/Navbar.module.css
@@ -16,7 +16,7 @@
   background-color: #fffffe;
   z-index: 2;
   transition: all 0.4s;
-  height: fit-content;
+  height: 6rem;
   margin: auto 0.5rem;
 }
 
