--- a/Component/SlokasComponent/SlokCard/SlokCard.module.css
+++ b/Component/SlokasComponent/SlokCard/SlokCard.module.css
@@ -77,12 +77,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  align-items: center;
-  justify-items: center; */
   text-transform: capitalize;
-  /* background-color: gray; */
 }
 
 .div_with_header {
@@ -94,15 +89,15 @@
   row-gap: 0.3rem;
 }
 
+.div_with_header > h3 {
+  width: 100%;
+  text-align: left;
+}
+
 .content_container div:nth-child(2) {
   font-weight: 400;
   line-height: 1.9;
   word-spacing: 0.4rem;
-}
-
-.h3_translation {
-  width: 100%;
-  text-align: left;
 }
 
 .content_container div:first-child {
