--- a/Component/SlokasComponent/SlokHeader/SlokHeader.module.css
+++ b/Component/SlokasComponent/SlokHeader/SlokHeader.module.css
@@ -3,23 +3,25 @@
 .container {
   background-color: #fffffe;
 
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  padding-left: 1.3rem;
+  padding-top: 6rem;
+  /* padding-bottom: 1rem; */
+  padding-left: 2rem;
   padding-right: 1.3rem;
   width: 100%;
+  height: 10rem;
   font-weight: 600;
   position: -webkit-sticky; /*Safari browser*/
   position: sticky;
   top: 0;
   left: 0;
+  transform: translateY(-6rem);
   display: flex;
   font-size: 1.4rem;
   text-transform: capitalize;
   align-items: center;
   justify-content: space-between;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
-  /* z-index: 2; */
+
   transition: all 0.4s;
 }
 
